# moitel

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LAUNCH_CHECKLIST.md  MANIFEST.in  README.md  RISK_REGISTER.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging_conf.py  main.py  webhook_app.py
db/: __init__.py  base.py  models.py  repositories.py  session.py
db/migrations/: env.py
db/migrations/versions/: 67e09ba4b9d6_initial_schema_all_tables.py
faq/: en.yaml  ru.yaml
middlewares/: __init__.py  stack.py
routers/: __init__.py  admin_router.py  callbacks.py  common_router.py  keyboards.py  referral_router.py  start_router.py  support_router.py
scripts/: seed_offer.py
services/: __init__.py  admin_service.py  anti_fraud.py  broadcast_service.py  conversion_service.py  delivery_service.py  jobs.py  payment_service.py  referral_service.py  stats_service.py  support_service.py  xrocket_client.py
states/: __init__.py  support.py
tests/: conftest.py  test_admin_service.py  test_anti_fraud.py  test_broadcast_service.py  test_config.py  test_conversion_service.py  test_delivery_service.py  test_faq.py  test_handlers.py  test_i18n.py  test_integration.py  test_jobs.py  test_logging.py  test_payment_service.py  test_referral_service.py  test_repositories.py  test_smoke.py  test_support_service.py  test_webhook.py
texts/: en.json  ru.json
utils/: __init__.py  compliance.py  faq.py  i18n.py  security.py
