[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsbook-affiliate-bot"
version = "0.1.0"
description = "Telegram-first sports-betting affiliate/referral bot (MVP)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Solo Founder" }]
dependencies = [
    "aiogram>=3.29,<4",
    "SQLAlchemy>=2.0,<3",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "anyio>=4.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-setuptools",
]

[project.scripts]
bot = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "routers*", "services*", "db*", "middlewares*", "states*", "utils*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["texts", "build", "dist", "db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "routers", "services", "db", "middlewares", "states", "utils"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "texts/", "build/", "dist/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
